--- a/style/style.css
+++ b/style/style.css
@@ -95,18 +95,29 @@ address{
 }
 
 .footer {
+    box-sizing: border-box;
 	position: relative;
     height: 77px;
     background-color: #eff3f7;
   	margin-top: -77px;
     min-width: 970px;
+    padding-top:23px;
 }
 
-.copyright {
-	position: absolute;
+.wrap_footer {
+    margin: 0 auto;
+    max-width: 700px;
+    position: relative;
+    min-width: 500px;
+}
+
+.block_bot {
+    width: 700px;
+    min-width: 500px;
+    height: 100%;
+    min-height: 32px;
     text-align: center;
-	margin: auto;
-	top: 32px;right: 0;bottom: 8px;left: 0;
+    margin: 0 auto;
 }
 
 .footer .gradient {
@@ -390,9 +401,6 @@ ul {
     clear: both;
 }
 
-.item_links {
-}
-
 .hide_text {
     display: none;
 }
@@ -494,17 +502,12 @@ ul {
     text-align: center;
 }
 
-
-.submit.login {
+.loginsub {
     width: 100px;
     margin-left: -50px;
     left: 50%;
-}
-
-.submit {
     border-style: none;
     position: absolute;
-    left: 0;
     font-weight: 500;
     font-family: Fira Sans;
     font-size: 20px;
@@ -515,12 +518,26 @@ ul {
     box-shadow: 0 -2px #47c0db inset;
     transition: 0.2s;
 }
-.submit:hover{
+.loginsub:hover{
     background: #47c0db;
 }
 
-.icon_login {
+.lock {
     position: absolute;
-    background: url(../images/icon-lock.png) 17px center no-repeat;
-    left: 150px;
+    left: 20px;
+}
+
+.copyright {
+    margin: 0 100px;
+    padding-top: 7px;
+    text-align: center;
+}
+
+.lock .lock_inner {
+    display: block;
+    height: 40px;
+    line-height: 2.2;
+    color: #4a545d;
+    background: url(../images/icon-lock.png) no-repeat;
+    padding-left: 24px;
 }
